fixed nav item alignment issue

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -143,7 +143,7 @@ h3 { font-size: var(--fs-h3) }
         text-decoration: none;
         color: var(--clr-light);
         font-weight: var(--fw-bold);
-        font-size: var(--fs-h2);
+        font-size: 2rem;
     }
 
     .nav-link:hover {
